src/www/css/style.css
body {
  margin: 0;
  background: #000;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.container {
  display: flex;
  flex-flow: column;
  height: 100vh;
}

.filler-container {
  flex: 1;
  overflow: auto;
}

.tabs {
  display: flex;
  gap: 0.5rem;
  margin: 0.5rem;
}

.tab {
  flex: 1 1 auto;
}

.button {
  cursor: pointer;
  text-align: center;
  background: silver;
  box-shadow: inset -1px -1px #434343, inset 1px 1px #fff, inset -2px -2px grey,
    inset 2px 2px #dfdfdf;
  min-width: 2.5rem;
  display: inline-block;
}

.focused {
  background: grey;
}

.state-bar {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 0.2rem;
}

.message-container {
  display: flex;
  margin: 0 0.5rem 0.5rem 0.5rem;
  gap: 1rem;
  justify-content: space-between;
}

.message-container label {
  align-self: center;
}

.message {
  background: #2c2c2c;
  color: #e3e3e3;
  padding: 0.2rem 0.4rem 0.2rem 0.4rem;
  border-radius: 0.2rem;
  white-space: pre-wrap;
  display: flex;
  flex-direction: column;
}

.message-info {
  color: #ababab;
  font-size: 0.7rem;
  align-self: end;
}

.checked {
  background: #1a1a1a;
  color: #ababab;
}

.message-input {
  display: flex;
  gap: 0.5rem;
  margin: 0.5rem;
}

.input-div {
  flex: 1;
  max-height: 10rem;
  overflow: auto;
  background: white;
  border-radius: 0;
  box-shadow: inset -1px -1px #fff, inset 1px 1px grey, inset -2px -2px #dfdfdf,
    inset 2px 2px #434343;
  box-sizing: border-box;
  padding: 3px 4px;
}

input[type="checkbox"] {
  padding: 0;
  margin: 0;
  cursor: pointer;
}

.note {
  height: 100%;
  color: #e3e3e3;
  box-sizing: border-box;
  padding: 0 0.5rem 0.5rem 0.5rem;
  overflow: auto;
  white-space: pre-wrap;
}

.note-info-container {
  display: flex;
  justify-content: space-between;
  gap: 0.5rem;
  background: #2c2c2c;
  padding: 0.5rem;
}

.note-info {
  font-size: 0.7rem;
  color: #e3e3e3;
}

